syntax = "proto3";

package cmdctrlsvc;

service CmdCtrl {
    rpc Stop(EmptyMsg) returns (EmptyMsg) {}
    rpc RingUpdate(Ring) returns (RingUpdateResult) {}
    rpc Stats(EmptyMsg) returns (StatsMsg) {}
    rpc HealthCheck(EmptyMsg) returns (HealthCheckMsg) {}
}

message EmptyMsg {}

message Ring {
    int64 version = 1;
    bytes ring = 2;
}

message RingUpdateResult {
    int64 newversion = 1;
}

message StatsMsg {
    bytes stats = 1;
}

message HealthCheckMsg {
    bool status = 1;
    string msg = 2;
    int64  ts = 3;
}
